# axus-daemon-rs

./: .clinerules  .editorconfig  .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  Makefile.toml  README.md  axus-config.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: test-slim.yml  test.yml
docs/: decisions.md
docs/decisions/: 2024.md
docs/specifications/memos/: 2024.adoc
entrypoints/daemon/: Cargo.toml  build.rs
entrypoints/daemon/src/: error.rs  interface.rs  main.rs  prelude.rs  result.rs  shared.rs
entrypoints/daemon/src/interface/: server.rs
entrypoints/daemon/src/interface/features/: health.rs
entrypoints/daemon/src/shared/: config.rs  info.rs  state.rs
modules/api/: Cargo.toml
modules/engine/: Cargo.toml
modules/engine/src/: base.rs  core.rs  error.rs  lib.rs  model.rs  prelude.rs  service.rs
modules/engine/src/base/: storage.rs  sync.rs
modules/engine/src/base/collections/: hashset.rs
modules/engine/src/base/connection/: stream.rs  tcp.rs
modules/engine/src/base/connection/tcp/: accepter.rs  connector.rs  upnp_client.rs
modules/engine/src/base/runtime/: shutdown.rs
modules/engine/src/base/storage/: key_value_rocksdb_storage.rs
modules/engine/src/base/sync/: fn_hub.rs
modules/engine/src/core/: dht.rs  negotiator.rs  session.rs  storage.rs  util.rs
modules/engine/src/core/connection/: stream.rs  tcp.rs
modules/engine/src/core/connection/stream/: packet.rs
modules/engine/src/core/connection/tcp/: accepter.rs  connector.rs  upnp_client.rs
modules/engine/src/core/negotiator/: file.rs  node.rs
modules/engine/src/core/negotiator/file/: file_exchanger.rs  file_publisher.rs  file_publisher_repo.rs  file_subscriber.rs  model.rs  publisher.rs  session_status.rs  subscriber.rs  task_accepter.rs  task_connector.rs
modules/engine/src/core/negotiator/file/file_publisher/: design.md  file_publisher.rs  file_publisher_repo.rs  publisher.rs  publisher_repo.rs  task_encoder.rs  task_importer.rs  util.rs
modules/engine/src/core/negotiator/file/file_subscriber/: file_subscriber.rs  subscriber.rs  subscriber_repo.rs  task_decoder.rs  util.rs
modules/engine/src/core/negotiator/file/model/: merkle_layer.rs  published_block.rs  published_committed_file.rs  published_imported_file.rs  published_uncommitted_file.rs  published_unimported_file.rs  subscribed_file.rs
modules/engine/src/core/negotiator/file/publisher/: design.md  file_publisher.rs  file_publisher_repo.rs  task_importer.rs
modules/engine/src/core/negotiator/node/: kadx.rs  node_finder.rs  node_finder_repo.rs  node_profile_fetcher.rs  node_profile_repo.rs  session_status.rs  task_accepter.rs  task_communicator.rs  task_computer.rs  task_connector.rs
modules/engine/src/core/session/: accepter.rs  connector.rs  message.rs  model.rs
modules/engine/src/core/storage/: key_value_file.rs  key_value_file_storage.rs  key_value_rocksdb.rs  key_value_rocksdb_storage.rs
modules/engine/src/core/storage/key_value_file_storage/: rocksdb_storage.rs
modules/engine/src/core/util/: async_fn_hub.rs  event_listener.rs  sqlite.rs  terminable.rs  uri.rs
modules/engine/src/core/util/collections/: hashmap.rs
modules/engine/src/model/: asset_key.rs  converter.rs  file_ref.rs  node_profile.rs  node_ref.rs  omni_address.rs  omni_hash.rs  omni_signature.rs
modules/engine/src/model/converter/: uri.rs
modules/engine/src/service/: connection.rs  dht.rs  engine.rs  exchange.rs  session.rs  storage.rs  util.rs
modules/engine/src/service/connection/: framed.rs  stream.rs  tcp.rs
modules/engine/src/service/connection/stream/: framed.rs  packet.rs
modules/engine/src/service/connection/tcp/: accepter.rs  connection_tcp_accepter.rs  connection_tcp_connector.rs  connector.rs  upnp_client.rs
modules/engine/src/service/dht/: kadx.rs
modules/engine/src/service/engine/: file.rs  node.rs
modules/engine/src/service/engine/file/: file_publisher.rs  file_publisher_repo.rs  model.rs  session_status.rs
modules/engine/src/service/engine/file/model/: merkle_layer.rs  published_block.rs  published_file.rs
modules/engine/src/service/engine/node/: communicator.rs  node_finder.rs  node_profile_fetcher.rs  node_profile_repo.rs  node_ref_fetcher.rs  node_ref_repo.rs  session_status.rs  task_accepter.rs  task_communicator.rs  task_computer.rs  task_connector.rs
modules/engine/src/service/exchange/: node.rs
modules/engine/src/service/exchange/node/: initial_node_fetcher.rs  node_exchanger.rs  node_fetcher.rs
modules/engine/src/service/session/: accepter.rs  connector.rs  message.rs  model.rs
modules/engine/src/service/storage/: blob.rs
modules/engine/src/service/util/: cbor.rs  collections.rs  fn_hub.rs  fn_pipe.rs  kadx.rs  sqlite.rs  uri.rs  wait_group.rs
modules/engine/src/service/util/collections/: hashmap.rs  hashset.rs
