[profile.release]
debug = 1

[workspace]
members = [
  "./refs/core-rs/modules/base",
  "./refs/core-rs/modules/migration",
  "./refs/core-rs/modules/omnikit",
  "./refs/core-rs/modules/rocketpack",
  "./refs/core-rs/modules/testkit",

  "./entrypoints/daemon",
  "./modules/engine",
]
exclude = ["refs/core-rs"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Lyrise <lyrise1984@gmail.com>"]
version = "0.1.0"

[workspace.dependencies]
omnius-core-base = { path = "./refs/core-rs/modules/base" }
omnius-core-migration = { path = "./refs/core-rs/modules/migration", features = [
  "sqlite",
] }
omnius-core-omnikit = { path = "./refs/core-rs/modules/omnikit" }
omnius-core-rocketpack = { path = "./refs/core-rs/modules/rocketpack" }
omnius-core-testkit = { path = "./refs/core-rs/modules/testkit" }

rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.12.8", features = ["json"] }
anyhow = { version = "1.0.89", features = ["backtrace"] }
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.128"
testcontainers = "0.23.1"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tokio-stream = "0.1.16"
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.2", features = [
  "postgres",
  "sqlite",
  "chrono",
  "json",
  "macros",
  "runtime-tokio-rustls",
] }
tower-http = { version = "0.6.1", features = ["cors"] }
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
ring = "0.17.8"
hex = "0.4.3"
urlencoding = "2.1.3"
hyper = "1.4"
tower = "0.5"
thiserror = "1.0.64"
jsonwebtoken = "9.3.0"
validator = { version = "0.18", features = ["derive"] }
headers = "0.4.0"
once_cell = "1.20.2"
base64 = "0.22.1"
futures = "0.3.31"
futures-util = "0.3.31"
serial_test = "3.1.1"
rupnp = "2.0.0"
pin-utils = "0.1.0"
local-ip-address = "0.6.3"
nom = "7.1.3"
fast-socks5 = "0.9.6"
rocksdb = { version = "0.22.0", default-features = false }
rand_core = "0.6.4"
sha3 = "0.10.8"
ciborium = "0.2.2"
bitflags = { version = "2.6.0", features = ["serde"] }
tempfile = "3.13.0"
crc = "3.2.1"
testresult = "0.4.1"
hkdf = "0.12.4"
aes-gcm = "0.10.3"
parking_lot = "0.12.3"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.1", features = [
  "rand_core",
  "serde",
  "pkcs8",
] }
num-traits = "0.2.19"
num-derive = "0.4.2"
async-stream = "0.3.6"
