[profile.release]
debug = 1

[workspace]
members = [
  "./refs/core-rs/modules/base",
  "./refs/core-rs/modules/migration",
  "./refs/core-rs/modules/omnikit",
  "./refs/core-rs/modules/rocketpack",
  "./refs/core-rs/modules/testkit",

  "./entrypoints/daemon",
  "./modules/engine",
]
exclude = ["refs/core-rs"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Lyrise <lyrise1984@gmail.com>"]
version = "0.1.0"

[workspace.dependencies]
omnius-axus-engine = { path = "./modules/engine" }

omnius-core-base = { path = "./refs/core-rs/modules/base" }
omnius-core-migration = { path = "./refs/core-rs/modules/migration", features = [
  "sqlite",
] }
omnius-core-omnikit = { path = "./refs/core-rs/modules/omnikit" }
omnius-core-rocketpack = { path = "./refs/core-rs/modules/rocketpack" }
omnius-core-testkit = { path = "./refs/core-rs/modules/testkit" }

rand = "0.9.2"
rand_core = "0.9.3"
rand_chacha = "0.9.0"
reqwest = { version = "0.12.23", features = ["json"] }
anyhow = { version = "1.0.99", features = ["backtrace"] }
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.142"
testcontainers = "0.25.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
tokio-stream = "0.1.17"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.6", features = [
  "postgres",
  "sqlite",
  "chrono",
  "json",
  "macros",
  "runtime-tokio-rustls",
] }
tower-http = { version = "0.6.6", features = ["cors"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
ring = "0.17.14"
hex = "0.4.3"
urlencoding = "2.1.3"
hyper = "1.6.0"
tower = "0.5.2"
thiserror = "2.0.14"
jsonwebtoken = "9.3.1"
validator = { version = "0.20", features = ["derive"] }
headers = "0.4.1"
once_cell = "1.21.3"
base64 = "0.22.1"
futures = "0.3.31"
futures-util = "0.3.31"
serial_test = "3.2.0"
rupnp = "3.0.0"
pin-utils = "0.1.0"
local-ip-address = "0.6.5"
nom = "8.0.0"
fast-socks5 = "0.10.0"
rocksdb = { version = "0.24.0", default-features = false }
sha3 = "0.10.8"
ciborium = "0.2.2"
bitflags = { version = "2.9.1", features = ["serde"] }
tempfile = "3.20.0"
crc = "3.3.0"
testresult = "0.4.1"
hkdf = "0.12.4"
aes-gcm = "0.10.3"
parking_lot = "0.12.4"
x25519-dalek = { version = "=3.0.0-pre.0", features = ["static_secrets"] }
ed25519-dalek = { version = "=3.0.0-pre.0", features = [
  "alloc",
  "rand_core",
  "serde",
  "pkcs8",
] }
num-traits = "0.2.19"
num-derive = "0.4.2"
async-stream = "0.3.6"
clap = { version = "4.5.44", features = ["wrap_help", "derive"] }
yamux = "0.13.6"
toml = "0.9.5"
backtrace = "0.3.75"
strum = { version = "0.27.2", features = ["derive"] }
