[package]
name = "omnius-axus-daemon"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
build = "build.rs"

[features]
stable-test = []

[dependencies]
omnius-axus-engine = { workspace = true }

omnius-core-base = { workspace = true }
omnius-core-rocketpack = { workspace = true }
omnius-core-omnikit = { workspace = true }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }
urlencoding = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
validator = { workspace = true }
headers = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serial_test = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
clap = { workspace = true }
backtrace = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testresult = { workspace = true }
