[package]
name = "axus-engine"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
build = "build.rs"

[features]
stable-test = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
config = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }
urlencoding = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
validator = { workspace = true }
headers = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serial_test = { workspace = true }
rupnp = { workspace = true }
tokio-util = { workspace = true }
pin-utils = { workspace = true }
local-ip-address = { workspace = true }
cbor = { workspace = true }
nom = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true }
