[package]
name = "axus-engine"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
build = "build.rs"

[features]
stable-test = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
config = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }
urlencoding = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serial_test = { workspace = true }
rupnp = { workspace = true }
tokio-util = { workspace = true }
pin-utils = { workspace = true }
local-ip-address = { workspace = true }
nom = { workspace = true }
ciborium = { workspace = true }
fast-socks5 = { workspace = true }
librocksdb-sys = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true }
