[package]
name = "axus-engine"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[features]
stable-test = []

[dependencies]
core-base = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
config = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }
urlencoding = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serial_test = { workspace = true }
rupnp = { workspace = true }
pin-utils = { workspace = true }
local-ip-address = { workspace = true }
nom = { workspace = true }
fast-socks5 = { workspace = true }
rocksdb = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
sha3 = { workspace = true }
ciborium = { workspace = true }
bitflags = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
crc = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testresult = { workspace = true }
